Update knox.md